* Merged libpsanker and cleaned * Fixed autojoin * Support for 1.5.1
More bug squashing to come

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,5 @@ name: iSay
 version: MAVEN_VERSION
 main: com.patrickanker.isay.ISMain
 author: Patrick Anker
-depend: [libpsanker]
-softdepend: [VoxelGuest]
+softdepend: [Vault]
   
