--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <name>iSay</name>
     <groupId>com.patrickanker</groupId>
     <artifactId>iSay</artifactId>
-    <version>0.2-Re4</version>
+    <version>0.3</version>
     <packaging>jar</packaging>
     <url>http://github.com/psanker/iSay</url>
 
@@ -18,11 +18,6 @@
         <repository>
             <id>bukkit-repo</id>
             <url>http://repo.bukkit.org/content/groups/public</url>
-        </repository>
-        
-        <repository>
-            <id>libpsanker-releases</id>
-            <url>https://github.com/psanker/libpsanker/raw/master/releases</url>
         </repository>
         
          <repository>
@@ -38,19 +33,17 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.3.2-R1.1-SNAPSHOT</version>
+            <version>1.5.1-R0.1-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
         
-        <!-- lib stuff -->
+        <!-- CB -->
         <dependency>
-            <groupId>com.patrickanker</groupId>
-            <artifactId>libpsanker</artifactId>
-            <version>1.4.4</version>
+            <groupId>org.bukkit</groupId>
+            <artifactId>craftbukkit</artifactId>
+            <version>1.5.1-R0.1-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
-        
-        <!-- VG4 build 55 -->
         
         <!-- bit.ly -->
         <dependency>
@@ -72,6 +65,15 @@
             <artifactId>metrics-lite</artifactId>
             <version>1.2-SNAPSHOT</version>
             <scope>compile</scope>
+        </dependency>
+        
+        <!-- Vault -->
+        <dependency>
+            <groupId>net.milkbowl.vault</groupId>
+            <artifactId>Vault</artifactId>
+            <version>1.2.22-b277</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/Vault.jar</systemPath>
         </dependency>
         
     </dependencies>
@@ -100,32 +102,6 @@
                         </manifest>
                     </archive>
                 </configuration>
-            </plugin>
-            
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.5.1</version>
-                <executions>
-                    <execution>
-                        <id>copy</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>com.patrickanker</groupId>
-                                    <artifactId>libpsanker</artifactId>
-                                    <overWrite>true</overWrite>
-                                    <outputDirectory>${basedir}/latest</outputDirectory>
-                                    <destFileName>libpsanker-latest.jar</destFileName>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
             
             <plugin>
