--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <name>iSay</name>
     <groupId>com.patrickanker</groupId>
     <artifactId>iSay</artifactId>
-    <version>0.3</version>
+    <version>0.3-Re2</version>
     <packaging>jar</packaging>
     <url>http://github.com/psanker/iSay</url>
 
